# devops-order-system

./: .env  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
gateway/: nginx.conf
inventory-service/: Dockerfile  README.md  app.py  pyproject.toml  test_app.py
monitoring/: prometheus.yml
order-service/: Dockerfile  README.md  app.py  pyproject.toml  test_app.py
